--- a/modules/config/index.html
+++ b/modules/config/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="../../styles/base.css">
   <script src="../../scripts/storage.js"></script>
   <script src="../../scripts/toast.js"></script>
+  <script src="../../scripts/save-status.js"></script>
   <script src="./config.js" defer></script>
 </head>
 <body>
@@ -29,8 +30,9 @@
       <input id="cfg-footer" class="input" type="text" style="width:100%">
     </div>
 
-    <div class="actions" style="margin-top:12px;display:flex;gap:8px;justify-content:flex-end;">
+    <div class="actions" style="margin-top:12px;display:flex;gap:8px;justify-content:flex-end;align-items:center">
       <button class="btn" id="cfg-save">Speichern</button>
+      <span id="save-status-config" class="pill text-secondary">—</span>
     </div>
   </div>
   <div class="card" style="margin-top:12px">
@@ -43,7 +45,7 @@
     </select>
 
     <label class="label" for="cfg-interval" style="margin-top:8px">Intervall (Sekunden)</label>
-    <input id="cfg-interval" class="input" type="number" min="5" value="10">
+    <input id="cfg-interval" class="input" type="number" min="2" max="120" step="1" value="10">
 
     <div style="margin-top:8px;display:flex;gap:8px;align-items:center">
       <label style="display:flex;gap:8px;align-items:center;cursor:pointer">
