--- a/modules/customer/index.html
+++ b/modules/customer/index.html
@@ -12,6 +12,7 @@
   <script src="../../scripts/date.js"></script>
   <script src="../../scripts/storage.js"></script>
   <script type="module" src="../../scripts/firebase.js"></script>
+  <script src="../../scripts/save-status.js"></script>
   <style>
     .grid{display:grid;grid-template-columns:repeat(2,1fr);gap:12px}
     @media (max-width:720px){.grid{grid-template-columns:1fr}}
@@ -26,6 +27,10 @@
     <h2>Kundenstammdaten</h2>
     <div class="actions-top no-print">
       <button class="btn-ghost" onclick="dfsNav.backOr('../customers/index.html')">← Zur Kundenliste</button>
+      <div style="margin-left:auto;display:flex;gap:8px;align-items:center">
+        <button id="btn-save-customer" class="btn">Speichern</button>
+        <span id="save-status-customer" class="pill text-secondary">Ungespeichert</span>
+      </div>
     </div>
     <header class="print-header no-screen" id="print-header"></header>
     <div class="actions no-print" style="display:flex; gap:8px; justify-content:flex-end; margin-bottom:8px;">
