ux(save): spinner im speichern-button, auto-fade badge, timestamp zuletzt gespeichert (kunden/vertrag/config)

--- a/modules/config/index.html
+++ b/modules/config/index.html
@@ -33,6 +33,7 @@
     <div class="actions" style="margin-top:12px;display:flex;gap:8px;justify-content:flex-end;align-items:center">
       <button class="btn" id="cfg-save">Speichern</button>
       <span id="save-status-config" class="pill text-secondary">—</span>
+      <span id="save-meta-config" class="save-meta">—</span>
     </div>
   </div>
   <div class="card" style="margin-top:12px">
