--- a/modules/dashboard/index.html
+++ b/modules/dashboard/index.html
@@ -10,6 +10,7 @@
   <script src="../../scripts/date.js"></script>
   <script src="../../scripts/storage.js"></script>
   <script type="module" src="../../scripts/firebase.js"></script>
+  <script type="module" src="../../scripts/data-contracts.js"></script>
   <script src="../../scripts/analysis.js"></script>
   <style>.grid{display:grid;grid-template-columns:repeat(3,1fr);gap:12px}@media(max-width:900px){.grid{grid-template-columns:1fr}}</style>
   </head>
