--- a/modules/customer/index.html
+++ b/modules/customer/index.html
@@ -12,6 +12,7 @@
   <script src="../../scripts/date.js"></script>
   <script src="../../scripts/storage.js"></script>
   <script type="module" src="../../scripts/firebase.js"></script>
+  <script src="../../scripts/dfs-cloud.js"></script>
   <script type="module" src="../../scripts/data-contracts.js"></script>
   <script src="../../scripts/save-status.js"></script>
   <style>
@@ -31,6 +32,7 @@
       <div style="margin-left:auto;display:flex;gap:8px;align-items:center">
         <button id="btn-save-customer" class="btn">Speichern</button>
         <span id="save-status-customer" class="pill text-secondary">Ungespeichert</span>
+        <span id="save-meta-customer" class="save-meta">—</span>
       </div>
     </div>
     <header class="print-header no-screen" id="print-header"></header>
