--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
   <!-- Firebase + Bridge -->
   <script type="module" src="./scripts/firebaseClient.js"></script>
   <script type="module" src="./scripts/firebase.js"></script>
+  <script src="./scripts/dfs-cloud.js"></script>
   <script src="./scripts/devmenu.js"></script>
   
   <!-- Cache-Busting Helper -->
