--- a/modules/customer/index.html
+++ b/modules/customer/index.html
@@ -33,6 +33,7 @@
         <button id="btn-save-customer" class="btn">Speichern</button>
         <span id="save-status-customer" class="pill text-secondary">Ungespeichert</span>
         <span id="save-meta-customer" class="save-meta">—</span>
+        <button id="save-retry" class="btn-ghost sm no-print" style="display:none">Erneut senden</button>
       </div>
     </div>
     <header class="print-header no-screen" id="print-header"></header>
